--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "Alucard-theme",
-  "description": "Dedicated for my son",
-  "displayName": "Alucard",
-  "version": "1..0.0",
-  "icon": "assets/icon.jpg",
-  "keyrods": ["theme","Alucard","alucard","DanielDlc"],
-  "publisher": "DanielDlc",
-  "repository": "git@github.com:DanielDlc/Alucard-theme.git",
-  "author": "DanielDlc <dlc.engcomputacao@gmail.com>",
-  "engines": {
-    "vscode": "^1.67.0"
-  },
-  "categories": [
-      "Themes"
-  ],
-  "contributes": {
-      "themes": [
-          {
-              "label": "Alucard SotN",
-              "uiTheme": "vs-dark",
-              "path": "./themes/alucard-color-theme.json"
-          }
-      ]
-  },
-  "scripts": {
-      "package": "vsce package --no-yarn",
-      "publish": "vsce publish --no-yarn"
-  },
-  "license": "MIT",
-  "devDependencies": {
-      "vsce":"2.9.1"
-  }
+    "name": "alucard-sotn",
+    "displayName": "Alucard Sotn",
+    "description": "Alucard Theme!",
+    "version": "1.0.0",
+    "publisher": "AlucardSotn",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/DanielDlc/Alucard-theme.git"
+    },
+    "keywords": [
+        "dakr theme",
+        "tema dark",
+        "Alucard",
+        "alucard",
+        "castlevania",
+        "dracula",
+        "Sotn"
+    ],
+    "engines": {
+        "vscode": "^1.67.0"
+    },
+    "categories": [
+        "Themes"
+    ],
+    "contributes": {
+        "themes": [
+            {
+                "label": "Alucard Sotn",
+                "uiTheme": "vs-dark",
+                "path": "./themes/Alucard Sotn-color-theme.json"
+            }
+        ]
+    }
 }
