--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "displayName": "Alucard Sotn",
     "description": "Alucard Theme!",
     "version": "1.0.0",
+    "icon": "assets/icon.jpg",
     "publisher": "AlucardSotn",
     "repository": {
         "type": "git",
