--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-    "name": "alucard-sotn",
-    "displayName": "Alucard Sotn",
-    "description": "Alucard Theme!",
-    "version": "1.0.1",
-    "icon": "assets/icon.jpg",
-    "publisher": "AlucardSotn",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/DanielDlc/Alucard-theme.git"
-    },
-    "keywords": [
-        "dakr theme",
-        "tema dark",
-        "Alucard",
-        "alucard",
-        "castlevania",
-        "dracula",
-        "Sotn"
-    ],
-    "engines": {
-        "vscode": "^1.67.0"
-    },
-    "categories": [
-        "Themes"
-    ],
-    "contributes": {
-        "themes": [
-            {
-                "label": "Alucard Sotn",
-                "uiTheme": "vs-dark",
-                "path": "./themes/Alucard Sotn-color-theme.json"
-            }
-        ]
-    }
+  "name": "alucardsotn",
+  "displayName": "alucardsotn",
+  "description": "alucardsotn",
+  "version": "1.0.3",
+  "publisher": "DanielDlc",
+  "icon": "assets/icon.jpg",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DanielDlc/Alucard-theme.git"
+  },
+  "keywords": [
+    "theme",
+    "Alucard",
+    "alucard",
+    "dracula",
+    "Dracula",
+    "Sotn",
+    "Castlevania"
+  ],
+  "engines": {
+    "vscode": "^1.68.0"
+  },
+  "categories": [
+    "Themes"
+  ],
+  "contributes": {
+    "themes": [
+      {
+        "label": "Alucard",
+        "uiTheme": "vs-dark",
+        "path": "./themes/alucardsotn-color-theme.json"
+      }
+    ]
+  }
 }
