--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "alucardsotn",
-  "displayName": "alucardsotn",
-  "description": "alucardsotn",
-  "version": "1.0.3",
+  "displayName": "Alucard",
+  "description": "Alucard Theme!",
+  "version": "1.0.6",
   "publisher": "DanielDlc",
   "icon": "assets/icon.jpg",
   "repository": {
