--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alucardsotn",
   "displayName": "Alucard",
   "description": "Alucard Theme!",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "publisher": "DanielDlc",
   "icon": "assets/icon.jpg",
   "repository": {
@@ -30,6 +30,11 @@
         "label": "Alucard",
         "uiTheme": "vs-dark",
         "path": "./themes/alucardsotn-color-theme.json"
+      },
+      {
+        "label": "Alucard Twilight",
+        "uiTheme": "vs-dark",
+        "path": "./themes/alucardsotn-twilight-color-theme.json"
       }
     ]
   }
